--- a/AllstateCarProject/DashboardItem.xib
+++ b/AllstateCarProject/DashboardItem.xib
@@ -15,20 +15,20 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="390" height="111"/>
+            <rect key="frame" x="0.0" y="0.0" width="390" height="71"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5wI-Aa-0Fj">
-                    <rect key="frame" x="8" y="11" width="39" height="24"/>
+                    <rect key="frame" x="8" y="8" width="36.5" height="21.5"/>
                     <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Debug Data" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IIP-P3-7NZ">
-                    <rect key="frame" x="8" y="47" width="374" height="20.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Waiting for data" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IIP-P3-7NZ">
+                    <rect key="frame" x="8" y="37.5" width="102.5" height="17"/>
                     <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -41,17 +41,16 @@
             </subviews>
             <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="IIP-P3-7NZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="ADz-e9-ASG"/>
+                <constraint firstItem="5wI-Aa-0Fj" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="RKy-iS-LNr"/>
                 <constraint firstItem="5wI-Aa-0Fj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="VgN-Sv-IWH"/>
-                <constraint firstAttribute="trailingMargin" secondItem="IIP-P3-7NZ" secondAttribute="trailing" id="X5y-bv-dkV"/>
+                <constraint firstItem="IIP-P3-7NZ" firstAttribute="top" secondItem="5wI-Aa-0Fj" secondAttribute="bottom" constant="8" id="Xnv-w9-izB"/>
                 <constraint firstAttribute="trailingMargin" secondItem="eW7-YJ-P02" secondAttribute="trailing" id="YRy-hb-X4j"/>
-                <constraint firstItem="5wI-Aa-0Fj" firstAttribute="centerY" secondItem="eW7-YJ-P02" secondAttribute="centerY" id="ben-8P-OXp"/>
-                <constraint firstItem="eW7-YJ-P02" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" id="fJs-hR-DNv"/>
-                <constraint firstItem="IIP-P3-7NZ" firstAttribute="top" secondItem="eW7-YJ-P02" secondAttribute="bottom" constant="8" id="zgI-Bi-Acf"/>
+                <constraint firstItem="IIP-P3-7NZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="fbg-B7-lPu"/>
+                <constraint firstItem="eW7-YJ-P02" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="gon-mq-57X"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="33" y="-203.5"/>
+            <point key="canvasLocation" x="33" y="-223.5"/>
         </view>
     </objects>
 </document>
